--- a/playlist/manifest.json
+++ b/playlist/manifest.json
@@ -34,7 +34,7 @@
           "sizes": "512x512"
         } 
         ],
-    "start_url": "/",
+    "start_url": "/playlist",
     "background_color": "#00d1b2",
     "theme_color": "#00d1b2",
     "display": "standalone"
